# open-race

./: .gitignore  Cargo.toml  README.md  build.rs  flash.py  memory.x  monitor.py  rust-toolchain.toml
.cargo/: config.toml
pcb/: pcb-all.pos  pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch  pcb.net
pcb/jlcpcb/: project.db
pcb/jlcpcb/gerber/: pcb-CuBottom.gbr  pcb-CuIn1.gbr  pcb-CuIn2.gbr  pcb-CuTop.gbr  pcb-EdgeCuts.gbr  pcb-MaskBottom.gbr  pcb-MaskTop.gbr  pcb-NPTH.drl  pcb-PTH.drl  pcb-SilkBottom.gbr  pcb-SilkTop.gbr
pcb/jlcpcb/production_files/: BOM-pcb.csv  CPL-pcb.csv
pcb/production/: pcb-B_Cu.gbr  pcb-B_Mask.gbr  pcb-B_Paste.gbr  pcb-B_Silkscreen.gbr  pcb-Edge_Cuts.gbr  pcb-F_Cu.gbr  pcb-F_Mask.gbr  pcb-F_Paste.gbr  pcb-F_Silkscreen.gbr  pcb-In1_Cu.gbr  pcb-In2_Cu.gbr  pcb-NPTH.drl  pcb-PTH.drl  pcb-job.gbrjob
src/: driver.rs  gps.rs  led.rs  main.rs  status.rs
